added new formulation for y

--- a/notebook/HJB equation.ipynb
+++ b/notebook/HJB equation.ipynb
@@ -7,21 +7,10 @@
     "Equation:\n",
     "\n",
     "\\begin{align*}\n",
-    "0 = \\max_{e} \\min_{h_2} &-\\delta \\phi(y, z_2) + \\delta \\eta \\log e - \\delta(1-\\eta)\\lambda_1 y z_2 + \\xi_m\\frac{(h_2)^2}{2} + \\frac{\\partial \\phi}{\\partial y}(y, z_2) e\n",
-    "\\\\ &+ \\left[\\frac{\\partial \\phi}{\\partial z_2}(y, z_2)\\right]\\left[-\\rho (z_2 -\\mu_2) + \\sqrt{z_2} \\sigma_2 h_2\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(y, z_2)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
-    "\\end{align*}\n",
-    "\n",
-    "FOC of $h_2$ gives : \n",
-    "\n",
-    "$$\n",
-    "h_2^* = -\\frac{\\left[\\frac{\\partial \\phi}{\\partial z_2}(y, z_2)\\right]\\sqrt{z_2}\\sigma_2}{\\xi_m}\n",
-    "$$\n",
-    "\n",
-    "FOC of $e$ gives :\n",
-    "\n",
-    "$$\n",
-    "e^* = -\\frac{\\delta \\eta}{\\frac{\\partial \\phi}{\\partial y}(y, z_2)}\n",
-    "$$"
+    "0 = \\max_{e} \\min_{h_2} & -\\delta \\phi(y, z_2) + \\delta \\eta \\log e  + \\xi_m\\frac{(h_2)^2}{2} + \\frac{\\partial \\phi}{\\partial y}(y, z_2) {\\color{red}{z_2}e}  \\\\\n",
+    "& + \\left[\\frac{\\partial \\phi}{\\partial z_2}(y, z_2)\\right]\\left[-\\rho (z_2 -\\mu_2) + \\sqrt{z_2} \\sigma_2 h_2\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(y, z_2)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\\\\\n",
+    "& + (\\eta-1) (\\tau_1 + \\tau_2 y) z_2 e\n",
+    "\\end{align*}"
    ]
   }
  ],
