added python solver

--- a/notebook/BH_modified_second.ipynb
+++ b/notebook/BH_modified_second.ipynb
@@ -2,60 +2,111 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from scipy.sparse import csc_matrix\n",
+    "from scipy.sparse.linalg import spsolve\n",
+    "import scipy\n",
     "from numba import njit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model parameters\n",
-    "median = 1.75/1000\n",
-    "γ = 0.018\n",
-    "τ = median * γ\n",
-    "δ = 0.01\n",
-    "η = 0.032\n",
-    "ξ_m = 0.00256\n",
-    "\n",
-    "μ_2 = 1.\n",
-    "ρ = 0.5\n",
-    "σ_2 = np.sqrt((0.21)**2*2*ρ/μ_2) # Match moments, using 100 year's std"
+    "@njit\n",
+    "def upwind_2d(LHS, A, B1, B2, C1, C2, i, j, dx, dy):\n",
+    "    I, J = A.shape\n",
+    "    loc_xy = i*J + j\n",
+    "    loc_xp1y = (i+1)*J + j\n",
+    "    loc_xp2y = (i+2)*J + j\n",
+    "    loc_xm1y = (i-1)*J + j\n",
+    "    loc_xm2y = (i-2)*J + j\n",
+    "    loc_xyp1 = i*J + j+1\n",
+    "    loc_xyp2 = i*J + j+2\n",
+    "    loc_xym1 = i*J + j-1\n",
+    "    loc_xym2 = i*J + j-2\n",
+    "    LHS[i, j] += A[i, j]\n",
+    "    if i == 0:\n",
+    "        LHS[loc_xy, loc_xy] += B1[i, j] * (-1./dx) + C1[i, j] * (1./dx**2)\n",
+    "        LHS[loc_xp1y, j] += B1[i, j] * (1./dx) + C1[i, j] * (-2./dx**2)\n",
+    "        LHS[loc_xp2y, j] += C1[i, j] * (1./dx**2)\n",
+    "    elif i == I-1:\n",
+    "        LHS[loc_xy, loc_xy] += B1[i, j] * (1./dx) + C1[i, j] * (1./dx**2)\n",
+    "        LHS[loc_xm1y, loc_xy] += B1[i, j] * (-1./dx) + C1[i, j] * (-2./dx**2)\n",
+    "        LHS[loc_xm2y, loc_xy] += C1[i, j] * (1./dx**2)\n",
+    "    else:\n",
+    "        LHS[loc_xy, loc_xy] += B1[i, j] * ((-1./dx) * (B1[i, j]>0) + (1./dx) * (B1[i, j]<=0))\\\n",
+    "                    + C1[i, j] * (-2./dx**2)\n",
+    "        LHS[loc_xm1y, loc_xy] += B1[i, j] * (-1./dx) * (B1[i, j]<=0) + C1[i, j] * (1./dx**2)\n",
+    "        LHS[loc_xp1y, loc_xy] += B1[i, j] * (1./dx) * (B1[i, j]>0) + C1[i, j] * (1./dx**2)\n",
+    "    if j == 0:\n",
+    "        LHS[loc_xy, loc_xy] += B2[i, j] * (-1./dy) + C2[i, j] * (1./dy**2)\n",
+    "        LHS[loc_xy, loc_xyp1] += B2[i, j] * (1./dy) + C2[i, j] * (-2./dy**2)\n",
+    "        LHS[loc_xy, loc_xyp2] += C2[i, j] * (1./dy**2)\n",
+    "    elif j == J-1:\n",
+    "        LHS[loc_xy, loc_xy] += B2[i, j] * (1./dy) + C2[i, j] * (1./dy**2)\n",
+    "        LHS[loc_xy, loc_xym1] += B2[i, j] * (-1./dy) + C2[i, j] * (-2./dy**2)\n",
+    "        LHS[loc_xy, loc_xym2] += C2[i, j] * (1./dy**2)\n",
+    "    else:\n",
+    "        LHS[loc_xy, loc_xy] += B2[i, j] * ((-1./dy) * (B2[i, j]>0) + (1./dy) * (B2[i, j]<=0))\\\n",
+    "                    + C2[i, j] * (-2./dy**2)\n",
+    "        LHS[loc_xy, loc_xym1] += B2[i, j] * (-1./dy) * (B2[i, j]<=0) + C2[i, j] * (1./dy**2)\n",
+    "        LHS[loc_xy, loc_xyp1] += B2[i, j] * (1./dy) * (B2[i, j]>0) + C2[i, j] * (1./dy**2)\n",
+    "    return LHS"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Equation:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "0 &= \\max_{e}\\min_{h_2} -\\delta \\phi(y, z_2) + \\delta \\eta \\log e -\\delta(1-\\eta)y z_2 + \\xi_m \\frac{(h_2)^2}{2} + \\frac{\\partial \\phi}{\\partial y}(y,z_2) e - \\ell e\\\\\n",
-    "&+\\left[\\frac{\\partial \\phi}{\\partial z_2}(y,z_2)\\right]\\left[-\\rho(z_2-\\mu_2)+\\sqrt{z_2}\\sigma_2 h_2\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(y,z_2)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
-    "\\end{align*}\n",
-    "\n",
-    "FOC for $h_2$ gives:\n",
-    "$$\n",
-    "h^* = -\\frac{\\frac{\\partial \\phi}{\\partial z_2}(y,z_2)\\sqrt{z_2}\\sigma_2}{\\xi_m}\n",
-    "$$\n",
-    "\n",
-    "FOC for $e$ gives:\n",
-    "$$\n",
-    "e^* = \\frac{\\delta \\eta}{\\ell - \\frac{\\partial \\phi}{\\partial y}(y, z_2)}\n",
-    "$$\n",
-    "\n",
-    "Solve:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "\\frac{\\color{red}{\\phi_{i+1}(y,z_2)}-\\color{blue}{\\phi_{i}(y,z_2)}}{\\epsilon} &= -\\delta \\color{red}{\\phi(y, z_2)} + \\delta \\eta \\log \\color{blue}{e^*} -\\delta(1-\\eta)y z_2 + \\xi_m \\frac{(\\color{blue}{h_2^*})^2}{2}  + \\color{red}{\\frac{\\partial \\phi}{\\partial y}(y,z_2)} e\\\\\n",
-    "&+\\left[\\color{red}{\\frac{\\partial \\phi}{\\partial z_2}(y,z_2)}\\right]\\left[-\\rho(z_2-\\mu_2)+\\sqrt{z_2}\\sigma_2 \\color{blue}{h_2^*}\\right] + \\left[\\color{red}{\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(y,z_2)}\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
-    "\\end{align*}"
+    "@njit\n",
+    "def construct_matrix_2d(A, B1, B2, C1, C2, D, dx, dy, bc, impose_bc):\n",
+    "    \"\"\"\n",
+    "    boundaries = (nparray, nparray, nparray, nparray)\n",
+    "        (x_lower, x_upper, y_lower, y_upper)\n",
+    "    impose_bc = (Bool, Bool, Bool, Bool)\n",
+    "        if True, then the algorithm will impose user specified boundary conditions.\n",
+    "        otherwise the algorithm will impose natural boundary conditions.\n",
+    "    \"\"\"\n",
+    "    I, J = A.shape\n",
+    "    LHS = np.zeros_like((I*J, I*J))\n",
+    "    RHS = -D.reshape(-1)\n",
+    "    for i in range(I):\n",
+    "        for j in range(J):\n",
+    "            loc_xy = i*J + j\n",
+    "            if i == 0 and impose_bc[0]:\n",
+    "                LHS[loc_xy, loc_xy] = 1.\n",
+    "                RHS[loc_xy] = bc[0][j]\n",
+    "            elif i == I-1 and impose_bc[1]:\n",
+    "                LHS[loc_xy, loc_xy] = 1.\n",
+    "                RHS[loc_xy] = bc[1][j]\n",
+    "            elif j == 0 and impose_bc[2]:\n",
+    "                LHS[loc_xy, loc_xy] = 1.\n",
+    "                RHS[loc_xy] = bc[2][i]\n",
+    "            elif j == J-1 and impose_bc[3]:\n",
+    "                LHS[loc_xy, loc_xy] = 1.\n",
+    "                RHS[loc_xy] = bc[3][i]\n",
+    "            else:\n",
+    "                LHS = upwind_2d(LHS, A, B1, B2, C1, C2, i, j, dx, dy)\n",
+    "    return LHS, RHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solver_sparse_linear_system(LHS, RHS):\n",
+    "    return spsolve(csc_matrix(LHS), csc_matrix(RHS))"
    ]
   },
   {
@@ -460,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
