correct some error in false transient computation

--- a/notebook/dynamic_damages.ipynb
+++ b/notebook/dynamic_damages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "governing-spoke",
+   "id": "demographic-mining",
    "metadata": {},
    "source": [
     "# Dynamic damages"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "macro-columbia",
+   "id": "wrong-metro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "improved-laundry",
+   "id": "gentle-meeting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "favorite-prince",
+   "id": "italic-installation",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "polyphonic-desperate",
+   "id": "greek-anatomy",
    "metadata": {
     "scrolled": true
    },
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "governing-cologne",
+   "id": "traditional-delivery",
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "wrapped-comment",
+   "id": "painted-norwegian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fiscal-limit",
+   "id": "forty-rainbow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "magnetic-latino",
+   "id": "settled-choice",
    "metadata": {
     "code_folding": []
    },
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "checked-narrative",
+   "id": "essential-aquatic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "literary-outline",
+   "id": "potential-finding",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "innovative-report",
+   "id": "sporting-rings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bored-minority",
+   "id": "moving-italian",
    "metadata": {
     "code_folding": []
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "verified-gregory",
+   "id": "endless-philippines",
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "blank-correlation",
+   "id": "exciting-affiliation",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "apparent-think",
+   "id": "stable-driver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "juvenile-finance",
+   "id": "australian-extra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,8 +1612,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "annoying-madagascar",
+   "execution_count": 99,
+   "id": "hollywood-graduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,8 +1686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "cardiovascular-hardwood",
+   "execution_count": 100,
+   "id": "quantitative-cleveland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1699,6 @@
     "    while error > tol:\n",
     "        phi_grid_old = phi_grid.copy()\n",
     "        phi_grid = pde_solver(phi_grid_old,  z_grid, y_grid, terminal_condition, dlambdaMat, epsilon)\n",
-    "         exit_code = bicg(csc_matrix(LHS), RHS)\n",
     "        error = np.max(np.abs((phi_grid_old-phi_grid)/epsilon))\n",
     "        episode += 1\n",
     "        print('Episode: {}\\t error: {}'.format(episode,error))\n",
@@ -1708,8 +1707,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "sexual-exercise",
+   "execution_count": 101,
+   "id": "improved-financing",
    "metadata": {
     "scrolled": true
    },
@@ -1718,8 +1717,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 1\t error: 277030142750.241\n",
-      "Episode: 2\t error: nan\n"
+      "Episode: 1\t error: 1.525063258975456e+59\n"
+     ]
+    },
+    {
+     "ename": "LinAlgError",
+     "evalue": "Array must not contain infs or NaNs.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-101-839d65585cf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfalse_transient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstateSpace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"F\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_grid_new\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal_v\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdlambdaMat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-100-8c78b8782527>\u001b[0m in \u001b[0;36mfalse_transient\u001b[0;34m(phi_grid, z_grid, y_grid, terminal_condition, dlambdaMat, epsilon, delta, eta, mu2, sigma2, rho, max_iter, tol)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0merror\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mphi_grid_old\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mphi_grid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mphi_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpde_solver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi_grid_old\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mz_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal_condition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdlambdaMat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0merror\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi_grid_old\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mphi_grid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mepisode\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/ry38/lib/python3.8/site-packages/numba/np/linalg.py\u001b[0m in \u001b[0;36m_check_finite_matrix\u001b[0;34m()\u001b[0m\n\u001b[1;32m    750\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnditer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    751\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfinite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 752\u001b[0;31m             raise np.linalg.LinAlgError(\n\u001b[0m\u001b[1;32m    753\u001b[0m                 \"Array must not contain infs or NaNs.\")\n\u001b[1;32m    754\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mLinAlgError\u001b[0m: Array must not contain infs or NaNs."
      ]
     }
    ],
@@ -1730,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "catholic-colors",
+   "id": "established-shipping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "detected-luxembourg",
+   "id": "interracial-bangladesh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "thick-turning",
+   "id": "criminal-saint",
    "metadata": {},
    "outputs": [
     {
