--- a/plots/standardized/plots.tex
+++ b/plots/standardized/plots.tex
@@ -97,7 +97,7 @@
 
 \maketitle
  
-\section{Parameter setting: $\xi_w=1/600$, $\xi_a=1/10000$, $\xi_p=10\xi_w$, three damages ($1/3$, $1/3$, $1/3$ baseline probabilities)}
+\section{Parameter setting: $\xi_w=1000$, $\xi_a=1/10000$, $\xi_p=1/20$, three damages ($.45$, $.45$, $.1$ baseline probabilities)}
 
 \subsection{Value function}
 \begin{figure}[H]
@@ -123,52 +123,17 @@
 		\includegraphics[height=.2\textheight]{climate_histogram.pdf}
 \end{figure}
 
-\subsubsection{Histograms for climate sensitivities (conditional on low damage)}
-
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.2\textheight]{climate_histogram_low_damage.pdf}
-\end{figure}
-
-\subsubsection{Histograms for climate sensitivities (conditional on high damage)}
-
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.2\textheight]{climate_histogram_high_damage.pdf}
-\end{figure}
-
-\subsubsection{Histograms for climate sensitivities (conditional on extreme damage)}
-
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.2\textheight]{climate_histogram_extreme_damage.pdf}
-\end{figure}
-
-\subsection{Marginal value of emission}
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.25\textheight]{me_baseline.pdf}
-\end{figure}
-
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.25\textheight]{me_min_w.pdf}
-\end{figure}
-
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.25\textheight]{me_min_a.pdf}
-\end{figure}
-
-\begin{figure}[H]
-		\center
-		\includegraphics[height=.25\textheight]{me_min_p.pdf}
-\end{figure}
-
 \subsection{Social cost of carbon}
 \begin{figure}[H]
 		\center
 		\includegraphics[height=.35\textheight]{scc.pdf}
+\end{figure}
+
+
+\subsection{Uncertainty Decomposition}
+\begin{figure}[H]
+		\center
+		\includegraphics[height=.35\textheight]{uncertainty_decomposition.pdf}
 \end{figure}
 
 \end{document}
