produce paper plots

--- a/notebook/BHmodified.ipynb
+++ b/notebook/BHmodified.ipynb
@@ -7846,9 +7846,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ry38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -7860,7 +7860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
