--- a/notebook/jump_damage_appr_two.ipynb
+++ b/notebook/jump_damage_appr_two.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "political-turtle",
    "metadata": {
     "code_folding": []
    },
@@ -36,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "magnetic-brooks",
    "metadata": {
     "code_folding": []
    },
@@ -65,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fantastic-nylon",
    "metadata": {
     "code_folding": [
      1
@@ -117,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "agreed-mounting",
    "metadata": {
     "code_folding": []
    },
@@ -133,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "official-arbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +150,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaptive-slide",
    "metadata": {},
    "source": [
     "# Jump model of damages\n",
@@ -209,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "accompanied-float",
    "metadata": {
     "code_folding": [
      1
@@ -293,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "liable-edward",
    "metadata": {
     "code_folding": [
      1
@@ -312,7 +304,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "tribal-philadelphia",
    "metadata": {
     "code_folding": []
    },
@@ -353,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "placed-better",
    "metadata": {
     "scrolled": true
    },
@@ -6729,7 +6719,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "stainless-tutorial",
    "metadata": {
     "scrolled": true
    },
@@ -6766,7 +6755,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "endless-textbook",
    "metadata": {},
    "outputs": [
     {
@@ -6788,7 +6776,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "valid-bunch",
    "metadata": {},
    "outputs": [
     {
@@ -6823,7 +6810,6 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "connected-grade",
    "metadata": {},
    "outputs": [
     {
@@ -9429,7 +9415,6 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "settled-industry",
    "metadata": {
     "scrolled": true
    },
@@ -9466,7 +9451,6 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "encouraging-brick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9476,7 +9460,6 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "moral-title",
    "metadata": {
     "scrolled": true
    },
@@ -9512,7 +9495,6 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "stupid-champagne",
    "metadata": {
     "scrolled": true
    },
@@ -9552,7 +9534,6 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "dangerous-ballot",
    "metadata": {},
    "outputs": [
     {
@@ -9572,7 +9553,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driving-rover",
    "metadata": {},
    "source": [
     "# partition: carbon and temp"
@@ -9581,7 +9561,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "completed-province",
    "metadata": {},
    "outputs": [
     {
@@ -15752,7 +15731,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "comfortable-joseph",
    "metadata": {},
    "outputs": [
     {
@@ -15787,7 +15765,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "endless-festival",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15797,7 +15774,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "fitted-shopping",
    "metadata": {},
    "outputs": [
     {
@@ -22065,7 +22041,6 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "iraqi-catholic",
    "metadata": {},
    "outputs": [
     {
@@ -22100,7 +22075,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "personalized-phenomenon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22110,7 +22084,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "strong-george",
    "metadata": {},
    "outputs": [
     {
@@ -22150,7 +22123,6 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "sonic-found",
    "metadata": {},
    "outputs": [
     {
@@ -22187,7 +22159,6 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "intense-grocery",
    "metadata": {},
    "outputs": [
     {
@@ -22229,7 +22200,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-acting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22239,7 +22209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "southwest-springer",
    "metadata": {
     "code_folding": []
    },
@@ -22300,7 +22269,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minimal-sweet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22311,7 +22279,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-floating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22321,9 +22288,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ry38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -22335,7 +22302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
